manifests/demoapp-deployment-2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp-deployment
  labels:
    app: demoapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demoapp-pod
  template:
    metadata:
      labels:
        app: demoapp-pod
    spec:
      imagePullSecrets:
      - name: aws-registry
      containers:
      - name: demoapp-container
        image: 707246573807.dkr.ecr.us-west-2.amazonaws.com/training:1.0
        ports:
        - containerPort: 80
