manifests/wordpress-pod-1.yml
apiVersion: v1
kind: Pod
metadata:
  name: wordpress-pod
  labels:
    app: wordpress-pod
spec:
  containers:
  - name: wordpress-container
    image: wordpress:latest
    ports:
    - containerPort: 80
