manifests/wordpress-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: wordpress-pod
  labels:
    app: wordpress-pod
spec:
  containers:
  - name: wordpress-container
    image: wordpress:latest
    ports:
    - containerPort: 80
    volumeMounts:
    - mountPath: /var/www/html
      name: data-wordpress
  volumes:
    - name: data-wordpress
      persistentVolumeClaim:
        claimName: wordpress-pvc
