manifests/demoapp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: demoapp-service
  labels:
    app: demoapp-service
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    targetPort: 80
    port: 80
  selector:
    app: demoapp-pod
