manifests/nginx-services-1.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx-service
spec:
  type: NodePort
  ports:
  - protocol: TCP
    nodePort: 30001
    targetPort: 80
    port: 80
  selector:
    app: nginx-pod
