manifests/demoapp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demoapp-ingress
spec:
  rules:
    - host: np-student01.mooo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demoapp-service
                port:
                  number: 80
